[opennap 0.36]

`*', `?', `.' and `!' are no longer valid chars in nicks.  This is needed to
support the new expanded ban syntax

Bans are now of the form <nick!ip>.  `*' matches 0 or more chars, `?'
matches any single char.

Channel names must now begin with # or &.  The join command will
automatically prepend a # to channel names if missing.

Removed the USER_IP server numeric.  This version of opennap will not
interoperate with other opennap servers < 0.33, but will use less
bandwidth for server->server links

Added new config variable `search_timeout' which controls how long pending
searches will be considered valid before timing out.

Added new config variable `stats_port' to make the port 8889 stats
configurable since napigator now supports alternate ports.

Added support for `tcp_wrappers' to control access to the server.

Added opennap.init sample file for SysV-style init scripts
[Geoffrey Lee <snailtalk@linux-mandrake.com>]

Programs are now installed in /usr/local/sbin by default.

If `stats_port' is set to -1 in the config file, opennap will not listen
for stats reporting (by default it listens on port 8889).

Search token filtering is now configurable instead of hard-coded.  opennap
will read the file `filter' in the configuration directory for a list of
words (one per line) that should be skipped when indexing.  A
`sample.filter' file is now included with the distribution.  Generally, if
opennap gives a log message such as "bin for ... exceeds 5000 entries",
you probably want to include that word in the filter file since searches on
that token don't limit the search very much and won't get used (opennap uses
the bin with the fewest entries to make the fine grain comparisons, so
something with 5000+ entries won't likely be used).

Added new config var `eject_when_full' to have opennap kill nonsharing
clients when the server reaches max_connections.

[opennap 0.35]

added `max_clones' configuration variable to control how many clients may