@@ -104,6 +104,14 @@ server_password opensource
 # is set to 1 (default: 0)
 #eject_when_full 1
 
+# number of commands that can be issued in `flood_time' seconds
+# (default: 0 [no flood control])
+#flood_commands 5
+
+# number of seconds in which `flood_commands' number of commands can be
+# issued by a client (default: 0)
+#flood_time 10
+
 # END of Win32 configuration.  What follows is only for the Unix versions
 
 # if your operating system has a small limit for the maxium amount of data
